<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".login.ui.MainActivity">

    <ProgressBar
        android:id="@+id/enter_progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/enter_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="username"
            android:hint="@string/login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter" />

        <ProgressBar
            android:id="@+id/enter_child_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>